--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.panlijun</groupId>
   <artifactId>data-structure</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <description>这是一段master的描述</description>
 
   <name>data-structure</name>
   <!-- FIXME change it to the project's website -->
